# aoc

2024/: start
2024/01/: README.md  aoc.cabal
2024/01/app/: Main.hs
2024/02/: README.md
2024/02/app/: Main.hs
2024/03/: README.md  aoc.cabal
2024/03/app/: Main.hs
2024/04/: README.md
2024/04/app/: Main.hs
2024/05/: README.md  aoc.cabal
2024/05/app/: Main.hs
2025/haskell/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs
