cabal-version:   3.0
name:            aoc
version:         0.1.0.0
license:         NONE
author:          mtwtkman
maintainer:      924277+mtwtkman@users.noreply.github.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable aoc
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
